--- a/src/pug/components/decor.pug
+++ b/src/pug/components/decor.pug
@@ -1,12 +1,12 @@
 -
   const decors = [
-  { name: "decor1", w: 134.77, h: 134.77 },
-  { name: "decor2", w: 139.22, h: 139 },
-  { name: "decor3", w: 125.04, h: 108.64 },
-  { name: "decor4", w: 229.95, h: 173.11 },
-  { name: "decor5", w: 102.21, h: 104.15 },
-  { name: "decor6", w: 153.89, h: 153.89 },
-  { name: "decor7", w: 229.57, h: 215.64 }
+  { name: "decor1", w: 134.77, h: 134.77, depth },
+  { name: "decor2", w: 139.22, h: 139, depth },
+  { name: "decor3", w: 125.04, h: 108.64, depth },
+  { name: "decor4", w: 229.95, h: 173.11, depth },
+  { name: "decor5", w: 102.21, h: 104.15, depth },
+  { name: "decor6", w: 153.89, h: 153.89, depth },
+  { name: "decor7", w: 229.57, h: 215.64, depth }
   ];
 
 .decor-wrapper
