--- a/src/pug/components/slider.pug
+++ b/src/pug/components/slider.pug
@@ -8,7 +8,7 @@
             .review
               .review__flex-wrapper
                 .review__img 
-                  //- img(src="", alt="alt")
+                  img(src="./images/static/avatar.png", alt="alt")
                 .review__info
                   .review__name Святослав
                   .review__date 25 августа
