--- a/src/styles/components/_mine-title-block.sass
+++ b/src/styles/components/_mine-title-block.sass
@@ -14,7 +14,7 @@
     line-height: rem(72)
     font-weight: 700
 
-    @include xl
+    @media(max-width: 1600px)
       font-size: rem(45)
       line-height: rem(60)
 
