--- a/src/styles/components/_slider.sass
+++ b/src/styles/components/_slider.sass
@@ -15,9 +15,6 @@
     @include sm
       margin-top: rem(40)
 
-    .swiper-wrapper 
-      transition-timing-function: linear 
-
   &__item
     width: rem(458)!important
     min-height: rem(250)
@@ -48,6 +45,15 @@
     max-width: rem(52)
     min-width: rem(52)
     height: rem(52)
+    position: relative
+
+    img
+      position: absolute
+      width: 100%
+      height: 100%
+      inset: 0
+      object-position: center
+      object-fit: cover
 
   &__name 
     color: #fff
