--- a/src/styles/utils/_hero.sass
+++ b/src/styles/utils/_hero.sass
@@ -7,17 +7,17 @@
   position: relative
   z-index: 3
   padding-top: rem(75)
-  padding-bottom: rem(360)
+  padding-bottom: rem(220)
 
   @include xl
     padding-bottom: rem(230)
-  
+
   @include lg
     padding-bottom: rem(150)
 
   @include md
     padding-bottom: rem(50)
-    padding-top: rem(150)
+    padding-top: rem(200)
 
   @include xs
     padding-top: rem(120)
@@ -33,30 +33,43 @@
     .mine-title-block
       margin-right: rem(170)
 
-      @include xl
-        margin-right: rem(120)
-
-      @include lg
+      @media(max-width: 1600px)
         margin-right: rem(80)
 
       @include md
         margin-right: 0
         max-width: 80%
         margin-bottom: rem(24)
-      
-      @include sm 
+
+      @include sm
         max-width: 100%
         display: none
-        
 
     &--index
+      display: inline-flex
       .mine-title-block
         @include sm
           display: block
 
     &--single
-      justify-content: center    
-        
+      justify-content: center
+
+  .decor-wrapper
+    height: rem(633)
+    position: absolute
+    width: 100%
+    bottom: 0
+    top: auto
+    overflow-x: hidden
+
+    @include md
+      bottom: auto
+      top: 0
+      height: rem(200)
+
+    @include xs
+      height: rem(130)
+
   &__decor-item
     position: absolute
     display: inline-flex
@@ -64,179 +77,142 @@
     justify-content: center
     transition: all 2s
 
-    &:first-child
-      right: 91.60%
-      bottom: 53.51%
-      transform: rotate(31.99deg)
+    img
+      position: absolute
+      width: 100%
+      height: 100%
+      object-fit: cover
+      object-position: center
+      inset: 0
 
-      @media (max-width: 1799.98px)
-        bottom: 35%
+    &:first-child
+      top: 16.5%
+      left: 1.3%
+      width: rem(134)
+      height: rem(134)
 
       @include xl
-        bottom: 33%
-        right: 88%
-        width: rem(100)
-        height: rem(100)
-      
+        top: 35%
+        left: 1.3%
+
+      @include lg
+        top: 45%
+        left: 1%
+
       @include md
-        right: 50%
-        top: rem(5)
-        bottom: auto
-        width: rem(70)
-        height: rem(70)
+        top: rem(10)
+        left: 45%
+        width: rem(120)
+        height: rem(120)
 
-      @include sm
-        width: rem(31)
-        height: rem(31)
-
-
+      @include xs
+        width: rem(50)
+        height: rem(50)
 
     &:nth-child(2)
-      right: 85.30%
-      bottom: 21.33%
-      transform: rotate(-20.66deg)
+      top: 59.2%
+      left: 7.3%
+      width: rem(134)
+      height: rem(134)
 
       @include xl
-        bottom: 25%
-        right: 78%
-        width: rem(100)
-        height: rem(100)
+        top: 65%
+        left: 5%
 
       @include md
-        right: 5%
         top: rem(10)
-        width: rem(70)
-        height: rem(70)
-
-      @include sm
-        width: rem(31)
-        height: rem(31)  
-
-    &:nth-child(3)
-      right: 71.44%
-      bottom: 14.89%
-      transform: rotate(-17.1deg)
-
-      @include xl
-        right: 67%
-        bottom: 10%
-        width: rem(100)
-        height: rem(100)
-
-      @include md
-        right: 40%
-        top: rem(70)
-        width: rem(70)
-        height: rem(70)
-
-      @include sm
-        width: rem(43)
-        height: rem(43)  
-
-   
-
-    &:nth-child(4)
-      right: 47.97%
-      bottom: 12.39%
-      transform: rotate(12.76deg)
-
-      @include xl
-        bottom: 20%
-        width: rem(200)
-        height: rem(200)
-
-      @include md
-        right: 68%
-        top: rem(15)
-        width: rem(150)
-        height: rem(150)  
-        transform: rotate(-15deg)
-
-      @include sm
+        left: auto
+        right: rem(10)
         width: rem(80)
         height: rem(80)
 
-      @include xs 
-        right: 62%
+      @include xs
+        width: rem(50)
+        height: rem(50)
 
-    &:nth-child(5)
-      bottom: 13.70%
-      right: 30.44%
-      transform: rotate(-24.85deg)
-
-      @include xl
-        bottom: 0%
-        width: rem(200)
-        height: rem(200)
-      
-      @include md
-        right: 27%
-        top: rem(5)
-        width: rem(60)
-        height: rem(60)  
-
-      @include sm
-        width: rem(33)
-        height: rem(33)  
-
-      
-          
-
-    &:nth-child(6)
-      bottom: 18.71%
-      right: 9.60%
-      transform: rotate(14.79deg)
-      
-      @include xl
-        width: rem(120)
-        height: rem(120)
-        bottom: 0
-        right: 15%
+    &:nth-child(3)
+      top: 71.9%
+      left: 21.9%
+      width: rem(125)
+      height: rem(108)
 
       @include md
-        right: auto
-        left: 5%
-        top: rem(15)
-        width: rem(70)
-        height: rem(70)    
-
-      @include sm
-        width: rem(33)
-        height: rem(33) 
-      
-
-        
-
-    &:nth-child(7)
-      bottom: 56.61%
-      right: 3.14%
-      transform: rotate(-20deg)
-
-      @media (max-width: 1799.98px)
-        bottom: 35%
-      
-      @include xl
-        bottom: 13%
-        width: rem(200)
-        height: rem(200)
-        right: -5%
-
-      @include md
-        right: 10%
-        top: rem(30)
-        width: rem(170)
-        height: rem(170)   
-
-      @include sm
-        width: rem(84)
-        height: rem(84)   
+        top: auto
+        bottom: rem(10)
+        left: 53%
+        width: rem(100)
+        height: rem(95)
 
       @include xs
-        top: rem(50)
-        transform: rotate(-10deg)
+        width: rem(60)
+        height: rem(54)
 
-    img
-      @include xl
-        position: absolute
-        object-fit: contain
-        width: 100%
+    &:nth-child(4)
+      top: 65.5%
+      left: 39.6%
+      width: rem(230)
+      height: rem(175)
+
+      @include md
+        top: auto
+        bottom: rem(20)
+        left: 20%
+        width: rem(140)
+        height: rem(120)
+
+      @include xs
+        width: rem(100)
+        height: rem(80)
+
+        img
+          transform: rotate(-30deg)
+
+    &:nth-child(5)
+      top: 74.2%
+      left: 63.5%
+      width: rem(105)
+      height: rem(105)
+
+      @include md
+        top: rem(10)
+        left: 67%
+        width: rem(90)
+        height: rem(90)
+
+      @include xs
+        width: rem(50)
+        height: rem(50)
+
+    &:nth-child(6)
+      top: 60%
+      left: 81.5%
+      width: rem(155)
+      height: rem(155)
+
+      @include md
+        top: rem(10)
+        left: rem(10)
+        width: rem(90)
+        height: rem(90)
+
+      @include xs
+        width: rem(50)
+        height: rem(50)
+
+    &:nth-child(7)
+      top: 5%
+      left: 84.1%
+      width: rem(230)
+      height: rem(230)
+
+      @include md
+        top: auto
+        left: auto
+        bottom: rem(10)
+        right: 7%
+        width: rem(120)
+        height: rem(120)
+
+      @include xs
+        width: rem(80)
+        height: rem(80)
