--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -2,6 +2,6 @@ header.header
   .container
     .header__flex-container
       include ../components/logo
-      div(style="display:flex; gap:10px")
+      div(style="display:flex; align-items: center; gap:10px")
         include ../components/avatar
         include ../components/login
