--- a/src/styles/components/_input.sass
+++ b/src/styles/components/_input.sass
@@ -97,6 +97,7 @@
       align-items: center
       justify-content: space-between
       column-gap: rem(16)
+      min-height: rem(70)
 
       input
         font-size: rem(20)
