--- a/src/styles/utils/_calculator-wrap.sass
+++ b/src/styles/utils/_calculator-wrap.sass
@@ -106,6 +106,10 @@
   .tabs
     margin-bottom: rem(24)
 
+    &--solid 
+      @include xs
+        margin-bottom: rem(32)
+
   .mine-title-block__icon-wrap
     margin-top: rem(56)
     display: none
