--- a/src/styles/base/_reset.sass
+++ b/src/styles/base/_reset.sass
@@ -2,3 +2,13 @@
   margin: 0
   padding: 0
   box-sizing: border-box
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset !important
+  box-shadow: 0 0 0px 1000px transparent inset !important
+  -webkit-text-fill-color: #fff !important
+  background-color: transparent !important
+  transition: background-color 9999s ease-in-out 0s
