--- a/src/styles/components/_tabs.sass
+++ b/src/styles/components/_tabs.sass
@@ -40,6 +40,7 @@
       position: relative
 
   &--solid
+    
     .tabs__nav
       background-color: #233331
       border-radius: rem(16)
@@ -52,11 +53,22 @@
         width: 50%
         color: #AFAFAF
         font-size: rem(20)
+        line-height: rem(24)
         font-weight: 600
         text-transform: uppercase
+        height: rem(37)
+
+        @include xs
+          font-size: rem(16)
+          border-radius: rem(12)
+          height: rem(32)
 
         &.is-active
           color: #fff
+    
+    .tabs__content
+      @include xs
+        margin-top: rem(16)      
 
   ~.receipt__list
     max-width: rem(385)
