--- a/src/pug/mixins/currencySelect.pug
+++ b/src/pug/mixins/currencySelect.pug
@@ -1,4 +1,4 @@
-mixin currencySelect(flag="./flags/1x1/ru.svg", code="RUB", src="./js/entities.json", disabled=false)
+mixin currencySelect(flag="./flags/1x1/ru.svg", code="RUB", src="./js/entities.json", disabled=false, placeholder)
   .cselect.cselect-js(data-src=src class=(disabled ? "is-disabled" : ""))
     .cselect__selected
       .cselect__selected-left
@@ -16,7 +16,7 @@ mixin currencySelect(flag="./flags/1x1/ru.svg", code="RUB", src="./js/entities.j
           .cselect__search
             svg(xmlns="http://www.w3.org/2000/svg", fill="none", viewBox="0 0 20 20")
               path(fill="#AFAFAF", d="m18.16 16.84-3.7-3.71a7.2 7.2 0 1 0-1.34 1.32l3.72 3.72a.94.94 0 1 0 1.33-1.33ZM3.44 8.75a5.31 5.31 0 1 1 10.62 0 5.31 5.31 0 0 1-10.62 0Z")
-            input(type="text" placeholder="Страна получателя")
+            input(type="text" placeholder=placeholder)
           ul
 
         .cselect__submenu
