--- a/src/pug/components/receipt1.pug
+++ b/src/pug/components/receipt1.pug
@@ -101,7 +101,7 @@
         .calculator-wrap__content-block
           .payment-method__bottom 
             label(for="agree")
-              input(type="checkbox" id="agree" name="agree")    
+              input(type="checkbox" id="agree" name="agree" checked)    
               .agree 
                 .agree__box 
                   svg(xmlns="http://www.w3.org/2000/svg", fill="none", viewBox="0 0 14 11")
