--- a/src/pug/components/receipt3.pug
+++ b/src/pug/components/receipt3.pug
@@ -7,7 +7,7 @@
     .calculator-wrap__content-block
       .receipt__top   
         .receipt__icon 
-        .receipt__title 
+        .receipt__title Пополнение СБП
         .receipt__total
           p 10 100
             span RUB
@@ -73,7 +73,7 @@
         .calculator-wrap__content-block
           .payment-method__bottom 
             label(for="agree2")
-              input(type="checkbox" id="agree2" name="agree")    
+              input(type="checkbox" id="agree2" name="agree" checked)    
               .agree 
                 .agree__box 
                   svg(xmlns="http://www.w3.org/2000/svg", fill="none", viewBox="0 0 14 11")
