--- a/src/pug/components/to-bank-account.pug
+++ b/src/pug/components/to-bank-account.pug
@@ -48,8 +48,8 @@
 
               .input
                 .input__field
-                  label(for="surname") ФИО получателя
-                  input(type="text" id="surname" name="surname") 
+                  label(for="company-name") Название компании*
+                  input(type="text" id="company-name" name="company-name") 
 
                 .message Английскими буквами
 
