--- a/src/pug/pages/components.pug
+++ b/src/pug/pages/components.pug
@@ -1,104 +1,104 @@
-extends ../layouts/base
+//- extends ../layouts/base
 
-block content
-  .container
+//- block content
+//-   .container
 
-    .components-wrap
-      .components-item
-        include ../components/main-title-block
+//-     .components-wrap
+//-       .components-item
+//-         include ../components/main-title-block
       
-      .components-item
-        include ../components/main-form
+//-       .components-item
+//-         include ../components/main-form
     
-    br
-    br
-    br
-    .title Отправка рублей за границу
-    br
-    br
-    br
+//-     br
+//-     br
+//-     br
+//-     .title Отправка рублей за границу
+//-     br
+//-     br
+//-     br
     
-    .components-wrap
+//-     .components-wrap
       
-      .components-item
-        include ../components/paysystem-choose-ru-abroad
+//-       .components-item
+//-         include ../components/paysystem-choose-ru-abroad
         
-      .components-item
-        include ../components/to-bank-card-ru-abroad
+//-       .components-item
+//-         include ../components/to-bank-card-ru-abroad
         
-      .components-item
-        include ../components/to-bank-sepa-ru-abroad
+//-       .components-item
+//-         include ../components/to-bank-sepa-ru-abroad
       
-      .components-item
-        include ../components/paypal-ru-abroad
+//-       .components-item
+//-         include ../components/paypal-ru-abroad
 
-      .components-item
-        include ../components/wise-ru-abroad
+//-       .components-item
+//-         include ../components/wise-ru-abroad
 
-      .components-item
-        include ../components/revolut-ru-abroad
+//-       .components-item
+//-         include ../components/revolut-ru-abroad
       
-      .components-item
-        include ../components/receipt
+//-       .components-item
+//-         include ../components/receipt
     
-    br
-    br
-    br
-    .title Отправка валюты в РФ
-    br
-    br
-    br
+//-     br
+//-     br
+//-     br
+//-     .title Отправка валюты в РФ
+//-     br
+//-     br
+//-     br
 
-    .components-wrap
+//-     .components-wrap
       
-      .components-item
-        include ../components/paysystem-choose-abroad-ru 
+//-       .components-item
+//-         include ../components/paysystem-choose-abroad-ru 
         
-      .components-item
-        include ../components/sbp
+//-       .components-item
+//-         include ../components/sbp
 
-      .components-item
-        include ../components/to-bank-abroad-ru
+//-       .components-item
+//-         include ../components/to-bank-abroad-ru
       
-      .components-item
-        include ../components/receipt-abroad-ru
-    br
-    br
-    br
-    .title Покупка USDT за рубль
-    br
-    br
-    br
+//-       .components-item
+//-         include ../components/receipt-abroad-ru
+//-     br
+//-     br
+//-     br
+//-     .title Покупка USDT за рубль
+//-     br
+//-     br
+//-     br
   
-    .components-wrap
+//-     .components-wrap
 
-      .components-item
-        include ../components/paysystem-choose-buy 
+//-       .components-item
+//-         include ../components/paysystem-choose-buy 
 
-      .components-item
-        include ../components/buy
+//-       .components-item
+//-         include ../components/buy
 
-      .components-item
-        include ../components/receipt
+//-       .components-item
+//-         include ../components/receipt
   
-    br
-    br
-    br
-    .title Продажа USDT за рубль
-    br
-    br
-    br
+//-     br
+//-     br
+//-     br
+//-     .title Продажа USDT за рубль
+//-     br
+//-     br
+//-     br
   
-    .components-wrap
+//-     .components-wrap
 
-      .components-item
-        include ../components/paysystem-choose-sell
+//-       .components-item
+//-         include ../components/paysystem-choose-sell
 
-      .components-item
-        include ../components/sell
+//-       .components-item
+//-         include ../components/sell
 
-      .components-item
-        include ../components/to-bank-sell
+//-       .components-item
+//-         include ../components/to-bank-sell
 
-      .components-item
-        include ../components/receipt-sell
+//-       .components-item
+//-         include ../components/receipt-sell
