--- a/src/styles/components/_mine-title-block.sass
+++ b/src/styles/components/_mine-title-block.sass
@@ -53,6 +53,9 @@
   &__column-icon
     color: #fff
 
+    @include xs
+      text-align: center
+
     svg
       width: rem(48)
       height: rem(48)
