--- a/src/styles/components/_pay-system.sass
+++ b/src/styles/components/_pay-system.sass
@@ -5,6 +5,7 @@
 .pay-system-wrap
   .pay-system
     margin-bottom: rem(20)
+    text-decoration: none
     
     &:last-child
       margin-bottom: 0
