--- a/src/pug/components/logo.pug
+++ b/src/pug/components/logo.pug
@@ -1,2 +1,2 @@
-a(href="index.html").logo
-  img(src="./images/static/logo.svg", alt="Transactia")
+a(href="/index.html").logo
+  img(src="/images/static/logo.svg", alt="Transactia")
