--- a/src/pug/components/receipt2.pug
+++ b/src/pug/components/receipt2.pug
@@ -7,7 +7,7 @@
     .calculator-wrap__content-block
       .receipt__top   
         .receipt__icon 
-        .receipt__title Пополнение счета ---
+        .receipt__title Пополнение счета SEPA
         .receipt__total
           p 10 100
             span RUB
@@ -79,7 +79,7 @@
         .calculator-wrap__content-block
           .payment-method__bottom 
             label(for="agree")
-              input(type="checkbox" id="agree" name="agree")    
+              input(type="checkbox" id="agree" name="agree" checked)    
               .agree 
                 .agree__box 
                   svg(xmlns="http://www.w3.org/2000/svg", fill="none", viewBox="0 0 14 11")
