--- a/src/pug/mixins/picture.pug
+++ b/src/pug/mixins/picture.pug
@@ -1,9 +1,9 @@
 mixin imgFixed(name, w, h, folder = "images/decors")
   picture
-    source(srcset=`./${folder}/${name}.avif` type="image/avif")
-    source(srcset=`./${folder}/${name}.webp` type="image/webp")
+    source(srcset=`/${folder}/${name}.avif` type="image/avif")
+    source(srcset=`/${folder}/${name}.webp` type="image/webp")
     img(
-      src=`./${folder}/${name}.png`
+      src=`/${folder}/${name}.png`
       width=w
       height=h
       alt=""
