--- a/src/pug/mixins/picture.pug
+++ b/src/pug/mixins/picture.pug
@@ -1,9 +1,9 @@
 mixin imgFixed(name, w, h, folder = "images/decors")
   picture
-    source(srcset=`/transactia/dist/images/${folder}/${name}.avif` type="image/avif")
+    source(srcset=`/transactia/dist/${folder}/${name}.avif` type="image/avif")
     source(srcset=`/transactia/dist/images/${folder}/${name}.webp` type="image/webp")
     img(
-      src=`/transactia/dist/images/${folder}/${name}.png`
+      src=`/transactia/dist/${folder}/${name}.png`
       width=w
       height=h
       alt=""
