--- a/src/pug/layouts/single-element.pug
+++ b/src/pug/layouts/single-element.pug
@@ -4,13 +4,13 @@ html(lang="ru")
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     
-    link(rel="icon", href="../favicon.ico", sizes="32x32")
-    link(rel="icon" href="../icon.svg")
-    link(rel="apple-touch-icon", href="../apple-touch-icon.png")
-    link(rel="manifest" href="../site.webmanifest")
+    link(rel="icon", href="./favicon.ico", sizes="32x32")
+    link(rel="icon" href="./icon.svg")
+    link(rel="apple-touch-icon", href="./apple-touch-icon.png")
+    link(rel="manifest" href="./site.webmanifest")
 
     title Project
-    link(rel="stylesheet" href="../css/main.css")
+    link(rel="stylesheet" href="./css/main.css")
 
   body
     include ../mixins/icon
@@ -40,5 +40,5 @@ html(lang="ru")
           
       include ../components/description
       include ../components/footer  
-    script(src="../js/main.js") 
+    script(src="./js/main.js") 
     
