--- a/src/pug/components/logo.pug
+++ b/src/pug/components/logo.pug
@@ -1,2 +1,2 @@
-a(href="/index.html").logo
+a(href="/transactia/dist/index.html").logo
   img(src="/transactia/dist/images/static/logo.svg", alt="Transactia")
