--- a/src/pug/components/abroad-to-ru/paysystems.pug
+++ b/src/pug/components/abroad-to-ru/paysystems.pug
@@ -6,7 +6,7 @@
     
     ]
 .calculator-wrap
-  a(href="#").return-btn 
+  a(href="").return-btn 
     svg(xmlns="http://www.w3.org/2000/svg", fill="none", viewBox="0 0 24 24")
       path(fill="#27615C", d="M15.8 18.7a1.13 1.13 0 1 1-1.6 1.6l-7.5-7.5a1.13 1.13 0 0 1 0-1.6l7.5-7.5a1.13 1.13 0 1 1 1.6 1.6L9.1 12l6.7 6.7Z")
     | Назад
