--- a/src/styles/base/_base.sass
+++ b/src/styles/base/_base.sass
@@ -172,6 +172,8 @@ section
     justify-content: center
 
 .currency-transfer
+  position: relative
+  
   .input
     margin-bottom: rem(8) !important
 
