--- a/src/styles/components/_tabs.sass
+++ b/src/styles/components/_tabs.sass
@@ -70,7 +70,7 @@
       @include xs
         margin-top: rem(16)      
 
-  ~.receipt__list
-    max-width: rem(385)
-    margin: 0 auto
-    margin-bottom: rem(24)
+    .receipt__list
+      max-width: rem(385)
+      margin: rem(24) auto
+      
