--- a/src/styles/base/_reset.sass
+++ b/src/styles/base/_reset.sass
@@ -12,3 +12,11 @@ input:-webkit-autofill:active
   -webkit-text-fill-color: #fff !important
   background-color: transparent !important
   transition: background-color 9999s ease-in-out 0s
+
+input[type="number"]
+  -moz-appearance: textfield
+
+  &::-webkit-inner-spin-button,
+  &::-webkit-outer-spin-button
+    -webkit-appearance: none
+    margin: 0
