--- a/src/pug/components/main-form.pug
+++ b/src/pug/components/main-form.pug
@@ -92,7 +92,16 @@
                   div
                     label(for="sending") Получатель получит
                     input.js-crypto-receive-amount(type="text" name="receiving-crypto")
-                  +currencySelect("./images/currencies/crypto/usdt.svg", "USDT", src="./js/crypto.json", true, "Валюта получателя").js-crypto-receiving-select
+                    
+                  .cselect.cselect-js.is-disabled.js-crypto-receiving-select
+                    div(class="cselect__selected" data-currency="USDT")
+                      div(class="cselect__selected-left")
+                        span(class="cselect__img")
+                          img(src="./images/currencies/crypto/usdt.svg", alt="USDT")
+                        span(class="cselect__code") USDT
+                      div(class="cselect__selected-right")
+                        svg(xmlns="http://www.w3.org/2000/svg", viewBox="0 0 16 16", width="20", height="20")
+                          path(fill="#fff", d="M8 11.47a1 1 0 0 1-.71-.29L2.34 6.23a1 1 0 1 1 1.42-1.41L8 9.06l4.24-4.24a1 1 0 1 1 1.42 1.41l-4.95 4.95a1 1 0 0 1-.71.29Z")  
 
             .receipt__list 
               .receipt__list-item
@@ -101,7 +110,7 @@
               
               .receipt__list-item
                 span Курс:
-                span.js-crypto-rate 
+                span.js-fiat-rate.js-crypto-rate
                 
               .receipt__list-item
                 span Скорость доставки:
