--- a/src/styles/utils/_calculator-wrap.sass
+++ b/src/styles/utils/_calculator-wrap.sass
@@ -109,8 +109,8 @@
     margin-bottom: rem(24)
 
     &--solid 
-      @include xs
-        margin-bottom: rem(32)
+      margin-bottom: 0
+      
 
   .mine-title-block__icon-wrap
     margin-top: rem(56)
